# clean-ddd-marketplace-api

./: .dockerignore  .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  makefile  pyproject.toml  requirements.txt
core/api/: filters.py  schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/customers/: handlers.py
core/api/v1/products/: handlers.py  schemas.py
core/api/v1/reviews/: handlers.py  schemas.py
core/apps/common/: enums.py  exceptions.py  models.py  use_cases.py
core/apps/customers/: admin.py  apps.py  entities.py  models.py
core/apps/customers/exceptions/: codes.py  customers.py
core/apps/customers/migrations/: 0001_initial.py  0002_alter_customermodel_created_at_and_more.py  0003_alter_customermodel_token.py
core/apps/customers/services/: auth.py  codes.py  customers.py  senders.py
core/apps/products/: admin.py  apps.py  containers.py
core/apps/products/entities/: products.py  reviews.py
core/apps/products/exceptions/: products.py  reviews.py
core/apps/products/filters/: products.py
core/apps/products/migrations/: 0001_initial.py  0002_productmodel_delete_product.py  0003_alter_productmodel_created_at_and_more.py  0004_productreviewmodel.py  0005_rename_productreviewmodel_reviewmodel.py
core/apps/products/models/: __init__.py  products.py  reviews.py
core/project/: asgi.py  containers.py  settings.py  urls.py  wsgi.py
core/project/settings/: main.py
docker_compose/: app.yaml  storages.yaml
tests/factories/: products.py
tests/services/: test_products.py
(+3 files in other folders)
