[tool.poetry]
name = "clean-marketplace"
version = "0.1.0"
description = "Clean Django Ninja Marketplace"
authors = ["dotpep <pepelnine@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
psycopg2 = "^2.9.9"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
